<resources>
    <string name="app_name">SMES</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="nav_1">Announcement</string>
    <string name="nav_2">Grades</string>
    <string name="nav_3">Schedule</string>
    <string name="nav_4">My Record</string>
    <string name="nav_5">My Profile</string>
    <string name="nav_6">Library</string>
    <string name="nav_7">Registration</string>
    <string name="nav_8">Settings</string>
    <string name="nav_9">Logout</string>
    <string name="announcement_title">ANNOUNCEMENTS</string>
    <string name="schedule_title">SCHEDULE</string>
    <string name="library_title">LIBRARY</string>
    <string name="email_box">E-MAIL ADDRESS</string>
    <string name="password_box">PASSWORD</string>
    <string name="login_button">LOGIN</string>
    <string name="forgotpas_button">forgot password?</string>

    <string-array name="gender_spinner">
        <item>Sex</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="civil_spinner">
        <item>Civil Status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Legally Separated</item>
        <item>Living Together</item>
        <item>Divorced</item>
        <item>Widowed</item>
    </string-array>
</resources>
