<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_announcement"
            android:icon="@mipmap/announce_icn"
            android:title="@string/nav_1" />

        <item
            android:id="@+id/nav_grades"
            android:icon="@mipmap/grade_icn"
            android:title="@string/nav_2" />

        <item
            android:id="@+id/nav_schedule"
            android:icon="@mipmap/schedule_icn"
            android:title="@string/nav_3" />

        <item
            android:id="@+id/nav_record"
            android:icon="@mipmap/record_icn"
            android:title="@string/nav_4" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/profile_icn"
            android:title="@string/nav_5" />

        <item
            android:id="@+id/nav_library"
            android:icon="@mipmap/library_icn"
            android:title="@string/nav_6" />

        <item
            android:id="@+id/nav_registration"
            android:icon="@mipmap/registrar_icn"
            android:title="@string/nav_7" />

    </group>


<item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/settings_icn"
                android:title="@string/nav_8" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/logout_icn"
                android:title="@string/nav_9" />
        </menu>
</item>


</menu>