<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_announcement"

            android:title="@string/nav_1" />

        <item
            android:id="@+id/nav_grades"

            android:title="@string/nav_2" />

        <item
            android:id="@+id/nav_schedule"

            android:title="@string/nav_3" />

<!--        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/ic_smile"
            android:title="@string/nav_4" />
-->
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_5" />

 <!--       <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_smile"
            android:title="@string/nav_6" />

        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/ic_smile"
            android:title="@string/nav_7" />
-->
    </group>

    <item android:title="--------------------------------------------------------">
        <menu>
<!--            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/nav_8" />
-->
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_9" />
        </menu>
    </item>

</menu>