<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@color/colorAccent">

    <Button
        android:id="@+id/forgotpass_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/shape_default"
        android:text="@string/forgotpas_button"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/btn_Login" />

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"

        app:srcCompat="@mipmap/logo_nobg" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="USERNAME"
        android:inputType="text"
        android:singleLine="true"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/login_icon"
        app:layout_constraintStart_toStartOf="@+id/login_icon"
        app:layout_constraintTop_toBottomOf="@+id/login_icon" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password_box"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/email_field"
        app:layout_constraintStart_toStartOf="@+id/email_field"
        app:layout_constraintTop_toBottomOf="@+id/email_field"

        />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/btn_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:background="@drawable/shape_default"
        android:text="@string/login_button"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field"
        app:spinning_bar_color="@color/colorPrimaryDark"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />

</android.support.constraint.ConstraintLayout>